--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/phenom
-spring.datasource.username=postgres
-spring.datasource.password=Pavan@123
+spring.datasource.url=jdbc:postgresql://10.109.58.73:5432/${POSTGRES_DB}
+spring.datasource.username={POSTGRES_USER}
+spring.datasource.password={POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
